<resources>
    <string name="app_name">LED</string>
    <string name="send_data">Wyślij dane</string>
    <string name="connect_device">Połącz z urządzeniem</string>
    <string name="input_code">Wprowadź kod</string>
    <string name="informacje">Informacje</string>
    <string name="animacje">Animacje</string>
    <string name="kolory">Kolory</string>
    <string name="animacjeTitle">Animacje</string>
    <string name="backpressbutton">BackPressButton</string>
    <string name="animacja_1">Chess board</string>
    <string name="animacja_2">Flash board</string>
    <string name="animacja_3">Running pixel</string>
    <string name="animacja_4">Randomizer</string>
    <string name="animacja_5">Ilusion</string>
    <string name="animacja_6">The flash</string>
    <string name="wybierz_animacje">Wybierz animację:</string>
    <string name="wybierz_kolor">Wybierz kolor:</string>
    <string name="info">Info</string>
    <string name="opis">Aplikacja do sterowania matrycą LED</string>
    <string name="log">LOG:</string>
    <string name="status">Status:</string>
    <string name="adres_mac">Adres MAC:</string>
    <string name="komunikaty_systemowe">Komunikaty systemowe</string>
    <string name="red">red:</string>
    <string name="green">green:</string>
    <string name="blue">blue:</string>
    <string name="disconnect_device">Rozłącz z urządzeniem</string>
    <string name="wyslij_animacje">Wyślij animację:</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="W">W</string>
    <string name="wyslij_kolor">Wyślij kolor</string>
</resources>