<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/button"
        android:textColorHighlight="@color/lily"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/colorButton"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="35dp"
            android:backgroundTint="@color/button"
            android:padding="0dp"
            android:contentDescription="@string/kolory"
            app:icon="@drawable/palette"
            app:iconGravity="textTop"
            app:iconPadding="0dp"
            app:iconSize="30dp" />

        <Button
            android:id="@+id/animButton"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/button"
            android:padding="0dp"
            android:layout_marginHorizontal="35dp"
            android:contentDescription="@string/animacje"
            app:icon="@drawable/animation"
            app:iconGravity="textTop"
            app:iconPadding="0dp"
            app:iconSize="30dp" />

        <Button
            android:id="@+id/infoButton"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/button"
            android:padding="0dp"
            android:layout_marginHorizontal="35dp"
            android:contentDescription="@string/informacje"
            app:icon="@drawable/info"
            app:iconGravity="textTop"
            app:iconPadding="0dp"
            app:iconSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/lily"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/dataInput"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="none"
            android:background="@color/white"
            android:hint="@string/input_code"
            android:textColorHint="@color/edit_text"
            android:fontFamily="@font/alata"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="14dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_data"
            android:fontFamily="@font/alata"
            android:textSize="20sp"
            android:backgroundTint="@color/button"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect_device"
            android:fontFamily="@font/alata"
            android:textSize="20sp"
            android:backgroundTint="@color/button"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:enabled="false"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>